--- a/config/private_pub_thin.yml
+++ b/config/private_pub_thin.yml
@@ -1,7 +1,7 @@
 port: 4443
 ssl: true
+ssl_verify_mode :verify_peer
 ssl_key_file: /home/app/cert/server.key
 ssl_cert_file: /home/app/cert/server.pem
-ssl_disable_verify: true
 environment: production
 rackup: private_pub.ru
